# AI-Powered-Contract-Review

./: README.md  pyproject.toml  requirements.txt  tasks.yaml
src/: app.py
src/contract/: crew.py  main.py
src/contract/config/: agents.yaml
