[project]
name = "contract"
version = "0.1.0"
description = "contract using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
contract = "contract.main:run"
run_crew = "contract.main:run"
train = "contract.main:train"
replay = "contract.main:replay"
test = "contract.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
